--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -2,7 +2,7 @@ name: Update a file every minute
 
 on:
   schedule:
-  - cron: '*/30 * * * *'
+  - cron: '0 0 * * *'
   workflow_dispatch:
 
 permissions: 
